<resources>

    <string name="app_name">Popular Movies</string>

<!--    YOUR OWN API KEY GOES HERE - SEE README FOR INSTRUCTIONS-->
    <string name="api_key"></string>

    <string name="plot_synopsis">Plot Synopsis</string>
    <string name="vote_average">Vote Average</string>
    <string name="release_date">Release Date</string>
    <string name="movie_poster_description">Movie Poster</string>
    <string name="no_network_connection">No internet connection.</string>
    <string name="settings">Settings</string>

    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key">order_by</string>
    <string name="settings_order_by_default">@string/settings_order_by_popularity_value</string>

    <string name="settings_order_by_popularity_label">Popularity</string>
    <string name="settings_order_by_popularity_value" translatable="false">popular</string>

    <string name="settings_order_by_top_rated_label">Top Rated</string>
    <string name="settings_order_by_top_rated_value" translatable="false">top_rated</string>

    <string name="settings_order_by_favourites_only_label">Show Favourites Only</string>
    <string name="settings_order_by_favourites_only_value" translatable="false">show_favourites</string>

    <string name="image_of_movie">Image of Movie</string>
    <string name="no_favourites_chosen">You haven\'t chosen any favourites yet!</string>
    <string name="api_missing">API Key missing. Please refer to README.md</string>
    <string name="no_trailers_available">No trailers currently available</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="favourite_button">Favourite Button</string>
    <string name="no_reviews">No reviews have been posted yet!</string>
</resources>