<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/movie_detail_release_date_label"
            android:text="@string/release_date"
            style="@style/MovieDetailsLabel"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/movie_detail_release_date"
            style="@style/MovieDetails"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/movie_detail_vote_average_label"
            android:text="@string/vote_average"
            style="@style/MovieDetailsLabel"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/movie_detail_vote_average"
            style="@style/MovieDetails"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/movie_detail_overview_label"
            android:text="@string/plot_synopsis"
            style="@style/MovieDetailsLabel"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/movie_detail_overview"
            style="@style/MovieDetails"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFF"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/movie_detail_trailers_label"
            android:text="@string/trailers"
            style="@style/MovieDetailsLabel"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trailer_recycler_view"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_trailers_available"
            android:visibility="gone"
            android:id="@+id/movie_detail_no_trailers"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFF"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/movie_detail_reviews_label"
            android:text="@string/reviews"
            style="@style/MovieDetailsLabel"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/movie_detail_reviews_text"
            tools:text="Reviews go here"
            style="@style/MovieDetails"/>
    </LinearLayout>
</ScrollView>